DTSCCI-730 fix payment intention npe